# rime-livekit-agents

./: .env.example  .gitignore  PROFILE_SEARCH_README.md  README.md  Readme.md  agent_configs.py  requirements-profile-search.txt  requirements.txt  rime_agent.py
Rime-simple-agent/: Readme.md  agent_configs.py  setup.py
Rime-simple-agent/agent-script/: .env.example  agent_configs.py  rime_agent.py
Rime-simple-agent/info/: app-config.ts
agent-starter-react/: README.md
api/: __init__.py  chat_handler.py  database.py  main.py
backend/: .env.example  agent.py  agent_configs.py  requirements.txt  rime_agent.py  text_utils.py
frontend/: .env.example  app-config.ts  package.json  pnpm-lock.yaml
frontend/app/(app)/: layout.tsx
frontend/components/: ai-settings-panel.tsx  app.tsx  session-view.tsx  welcome.tsx
frontend/components/ui/: label.tsx  sonner.tsx
frontend/lib/: types.ts
profile_search/: __init__.py  aggregator.py  linkedin_search.py  web_search.py
rime/: __init__.py  models.py  tts.py
rime-advanced-agent/backend/: README.md  requirements.txt  rime_agent.py  sentence_tokenizer.py
rime-advanced-agent/frontend/: package.json
rime-advanced-agent/frontend/app/: layout.tsx
rime-advanced-agent/frontend/app/(app)/: layout.tsx
rime-advanced-agent/frontend/components/: ai-settings-panel.tsx  alert-toast.tsx  app.tsx  welcome.tsx
rime-advanced-agent/frontend/components/ui/: slider.tsx  sonner.tsx
rime-advanced-agent/frontend/lib/: types.ts  utils.ts
rime-multilingual-agent/: .env.example  README.md  main.py  pyproject.toml
rime-simple-agent/: Readme.md  agent_configs.py  pyproject.toml  rime_agent.py
time-simple-agent/: setup.py
web_ui/: package.json
web_ui/src/components/: ChatInterface.tsx  ReportDisplay.tsx  SearchForm.tsx
web_ui/src/lib/: api.ts
web_ui/src/pages/: index.tsx
web_ui/src/styles/: globals.css
