[project]
name = "rime-multilingual-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "livekit>=1.0.20",
    "livekit-agents[deepgram,openai,rime,silero,turn-detector]>=1.3.6",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "python-dotenv>=1.2.1",
]
