[project]
name = "rime-simple-agent"
version = "0.1.0"
description = "A reference implementation of an AI voice agent using LiveKit and Rime, demonstrating a complete STT → LLM → TTS conversation pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "livekit>=1.0.12",
    "livekit-agents[openai,rime,silero,turn-detector]~=1.3.4",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
rime-agent = "rime_agent:main"
